--- a/Makefile.inc
+++ b/Makefile.inc
@@ -1,19 +1,19 @@
 # The definitions in this file should be changed to match your system
 
-CUDA_PATH =/usr/local/cuda
-INSTALL_DIR = /usr/local
+CUDA_PATH   = /usr/local/cuda
+INSTALL_DIR = .
 
-CUDA_DIR   ?= $(CUDA_PATH)
-THRUST_DIR =/usr/local/thrust-1.7
+CUDA_DIR   = $(CUDA_PATH)
+THRUST_DIR = $(CUDA_DIR)/include
 
-# LIB_ARCH   = lib
+GPU_ARCH   = sm_52
+
 LIB_ARCH   = lib64
-GPU_ARCH   = -gencode=arch=compute_75,code=sm_75
 
 GCC        = gcc
 GXX        = g++
 AR         = ar
-NVCC       = $(CUDA_DIR)/bin/nvcc -lineinfo #-Xptxas -abi=no
+NVCC       = $(CUDA_DIR)/bin/nvcc #-Xptxas -abi=no
 DOXYGEN    = doxygen
 RM         = rm
 ECHO       = echo
